--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-slick": "^0.30.1",
     "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "ui-select": "^0.16.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
