--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "chroma-js": "^2.4.2",
     "components": "^0.1.0",
+    "font-awesome": "^4.7.0",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
